@@ -58,6 +58,7 @@
       - Fixed icons colors
      * Differentiate between FW and ID errors in the wizard, update texts
      * Fix ID error being swapped with the FW error
+     * Fixed download ref, added total storage space info
 
 0.6.0 (2021-12-17)
     * Added endpoint for control of extruder
